--- a/wp-content/themes/kobayashi/scss/_top.scss
+++ b/wp-content/themes/kobayashi/scss/_top.scss
@@ -98,3 +98,62 @@
 	}
 	}
 }
+
+.sect_about{
+	hgroup h1{
+		&::before{
+			left: 0;
+			transform: translate(-80%, -40%);
+		}
+	}
+	img{ border-radius: rem(20);}
+@include media(md){
+	hgroup h1::before{
+		transform: translate(-80%, -60%);
+	}
+}
+}
+
+.sect_service{
+	hgroup h1{
+		&::before{
+			top: 60%;
+			left: 80%;
+			// transform: translate(-80%, -40%);
+		}
+	}
+	ul{
+		li{
+			position: relative;
+			z-index: 10;
+			>a{
+				display: block;
+				height: 100%;
+				padding: rem(12) rem(12) rem(8);
+				background-color: $White;
+				border-radius: rem(8);
+				box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.05);
+				p{
+					padding-right: 1rem;
+					font-weight: 600;
+					line-height: 1.3;
+					background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="24" viewBox="0 0 16 24" fill="none"><path d="M8.94626 12L4.87301 7.92701C4.73468 7.78851 4.66385 7.61443 4.66051 7.40476C4.65735 7.19526 4.72818 7.01801 4.87301 6.87301C5.01801 6.72818 5.19368 6.65576 5.40001 6.65576C5.60634 6.65576 5.78201 6.72818 5.92701 6.87301L10.4213 11.3673C10.5148 11.4609 10.5808 11.5597 10.6193 11.6635C10.6578 11.7673 10.677 11.8795 10.677 12C10.677 12.1205 10.6578 12.2327 10.6193 12.3365C10.5808 12.4403 10.5148 12.5391 10.4213 12.6328L5.92701 17.127C5.78851 17.2653 5.61443 17.3362 5.40476 17.3395C5.19526 17.3427 5.01801 17.2718 4.87301 17.127C4.72818 16.982 4.65576 16.8063 4.65576 16.6C4.65576 16.3937 4.72818 16.218 4.87301 16.073L8.94626 12Z" fill="%23262B58"/></svg>') 100% 50% no-repeat;
+					>small{
+						display: inline-block;
+						font-weight: 500;
+					}
+				}
+			}
+		}
+	}
+@include media(md){
+	ul li{
+		>a{
+			padding: rem(20) 1rem 1rem;
+			p{
+				background-size: 18.6667px, 28px;
+			}
+		}
+	}
+}
+}
