--- a/wp-content/themes/kobayashi/scss/_variables.scss
+++ b/wp-content/themes/kobayashi/scss/_variables.scss
@@ -18,6 +18,7 @@ $Text-400: #515579;
 $Text-100: #D4D5DE;
 $BG-color: #FBFAF5;
 $Blue: #000F94;
+$Blue-on: #0016e0;
 $Brown-500: #472C38;
 $Brown-400: #605259;
 
